--- a/res/layout/dropoff.xml
+++ b/res/layout/dropoff.xml
@@ -19,16 +19,22 @@
         android:layout_height="wrap_content"
         android:layout_weight="0.2"
         android:orientation="vertical" >
-        
+   <ScrollView
+       android:layout_width="match_parent"
+	   android:layout_height="match_parent">
         <TextView
+        android:id="@+id/order"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:text="@string/users_order"
+        android:gravity="center_vertical|center_horizontal"
+        android:text=""
         android:textSize="20sp"
         android:textStyle="italic"
         android:typeface="serif" />
+    </ScrollView>
     </LinearLayout>
+    
 
     <TableLayout
         android:id="@+id/keypad"
@@ -52,7 +58,7 @@
 
         <TableRow >
             <Button
-                android:id="@+id/signature"
+                android:id="@+id/complete_order"
                 android:text="Complete Order" >
             </Button>
             <Button
